# fractal-demos

./: .gitignore  LICENSE  README.md  napari_installation_instructions.md
.github/workflows/: project-management.yml
Fractal_stress_test/client/: fetch_test_data_from_zenodo.sh  install_client.sh  monitor_squeue.sh  preliminary_setup.sh  run_example.sh  simulate_many_runs.sh
Fractal_stress_test/server/: .gitignore  config.json  (+2 more)
OLD-examples-v0/: .gitignore  README.md
demo-november-2022/: ROIs_and_FeatureVis.ipynb  fractal_demo_uzh.md  installation_instructions.md  utils_roi_loading.py
demo-october-2022/: ROIs_and_FeatureVis.ipynb  fractal_demo_fmi.md  installation_instructions.md  utils_roi_loading.py
examples/: .gitignore  README.md  register_as_a_fractal_user.sh
examples-v1/: .gitignore
examples-v1/275_debug/client/package/fractal-tasks-core-low/: pyproject.toml
examples-v1/275_debug/client/package/fractal-tasks-core-low/fractal_tasks_core/: __FRACTAL_MANIFEST__.json  __init__.py  create_ome_zarr.py
examples/99_stress_test/fractal-tasks-stresstest/: pyproject.toml
examples/99_stress_test/fractal-tasks-stresstest/fractal_tasks_stresstest/: __FRACTAL_MANIFEST__.json  _utils.py  memory_task.py  prepare_metadata.py  sleep_task.py
examples/99_stress_test/fractal-tasks-stresstest/fractal_tasks_stresstest/dev/: new_args_schema.py
examples/99_stress_test/fractal-tasks-stresstest/profiling/: run_memory_task.py  run_profiling.sh
napari-ome-spec/: HCS_OME_zarr_specs.ipynb
nextflow_examples/: .gitignore  README.md
stress-test/: .gitignore
(+388 files in other folders)
