[tool.poetry]
name = "fractal-tasks-stresstest"
version = "2.0.0"
description = ""
authors = ["Tommaso Comparin <tommaso.comparin@exact-lab.it>"]
packages = [{include = "fractal_tasks_stresstest"}]

[tool.poetry.dependencies]
python = "^3.9"
fractal-tasks-core = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
